patch css for chal to be less buggy  on mobile (hopefully?)

--- a/css/chal.css
+++ b/css/chal.css
@@ -1,7 +1,7 @@
 .placeholder-container {
-  height: 100%;
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  flex-flow: column wrap;
 }
 
 .placeholder {
